--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>AF Virtual Gallery</title>
-    <meta name="description" content="360&deg; Image - A-Frame">
+    <meta name="description" content="360&deg; AF Virtual Gallery">
     <script src="./aframe-master.js"></script>
   </head>
   <body>
